# Dependency-system

./: CMakeLists.txt
include/: dependency_system.h
src/: dependency_system.c
tests/: CMakeLists.txt  dependency_system_tests.c  hooks.c
